# Collab_CGA_JDD

./: .gitignore  CMakeLists.txt  README.md
00_Stable_Version_Begin/: CMakeLists.txt
00_Stable_Version_Begin/src/: main.cpp
01_Clear_Template/: CMakeLists.txt
01_Clear_Template/src/: main.cpp
02_Main_Character/: CMakeLists.txt
02_Main_Character/src/: main.cpp
03_Animation/: CMakeLists.txt
03_Animation/src/: main.cpp
04_Colition_Layers/: CMakeLists.txt
04_Colition_Layers/src/: main.cpp
05_Advance_Enviroment/: CMakeLists.txt
05_Advance_Enviroment/src/: main.cpp
CGALib/src/: Terrain.cpp
Shaders/: iluminacion_textura_animation_fog.vs  multipleLights_ej.fs  skyBox_fog.fs  terrain.fs  terrain_fog.fs  terrain_fog.vs  terrain_shadow.fs
Textures/: terreno.kra  terreno.kra~
Textures/SkyBox_GE/: back.tga  bottom.tga  front.tga  left.tga  right.tga  top.tga
animaciones/: animation_buzz.txt  animation_buzz_joints.txt  animation_chopper.txt  animation_dart.txt  animation_dart_joints.txt
models/: template.mfs
models/DuckHunter/: Proyectile.mtl  cannon.fbx  coordenadas.txt  proyectile.blend  proyectile.blend1  tank_Duck_Hunter.blend  tank_Duck_Hunter.blend1  track.fbx  track.mtl  turret.mtl
models/Edificios/: Alto.mtl  ApaAma.mtl  Bano.mtl  Bodega.mtl  Casa1.mtl  Casa2.mtl  Departamento.mtl  EdificioL.mtl  EsquinaConPasto.mtl  Final.blend  Final.blend1  Final2.blend  Final2.blend1  Llave.mtl  ParedCompletaRota.mtl  Pasto.mtl  Rota.mtl  Triangulo.mtl  ammo.mtl
models/Helicopter/: Mi_24_chasis.mtl  Mi_24_rot.mtl  UA_Chopper.blend  UA_Chopper.blend1
(+25 files in other folders)
